feat: add recovery scenario orchestration monorepo layer

--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -64,6 +64,9 @@
     "@service/recovery-strategy-orchestrator": "workspace:*",
     "@data/recovery-strategy-store": "workspace:*",
     "@domain/recovery-command-network": "workspace:*",
-    "@shared/type-level": "workspace:*"
+    "@shared/type-level": "workspace:*",
+    "@domain/recovery-scenario-orchestration": "workspace:*",
+    "@service/recovery-incident-scenario-orchestrator": "workspace:*",
+    "@infrastructure/recovery-scenario-gateway": "workspace:*"
   }
 }
