Add continuity readiness domain/data/service/app TS graph modules

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -33,6 +33,9 @@
     "@service/recovery-continuity-lens": "workspace:*",
     "@service/incident-fusion-orchestrator": "workspace:*",
     "@service/incident-orchestration": "workspace:*",
+    "@data/continuity-readiness-store": "workspace:*",
+    "@service/continuity-readiness-orchestrator": "workspace:*",
+    "@domain/recovery-continuity-readiness": "workspace:*",
     "@domain/recovery-command-forge": "workspace:*",
     "@domain/recovery-operations-models": "workspace:*",
     "@domain/recovery-command-studio": "workspace:*",
