feat: expand recovery scenario orchestration and console lab surface

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -66,6 +66,7 @@
     "@service/recovery-fabric-orchestrator": "workspace:*",
     "@service/recovery-incident-graph-engine": "workspace:*",
     "@domain/recovery-incident-graph": "workspace:*",
+    "@domain/recovery-scenario-orchestration": "workspace:*",
     "@service/recovery-command-forge-orchestrator": "workspace:*",
     "@service/recovery-ops-orchestration-engine": "workspace:*",
     "@service/recovery-playbook-lab-orchestrator": "workspace:*",
