--- a/packages/domain/recovery-scenario-orchestration/package.json
+++ b/packages/domain/recovery-scenario-orchestration/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@shared/type-level": "workspace:*",
     "@shared/core": "workspace:*",
+    "@shared/util": "workspace:*",
     "zod": "^3.24.0"
   }
 }
