--- a/packages/domain/recovery-scenario-orchestration/tsconfig.json
+++ b/packages/domain/recovery-scenario-orchestration/tsconfig.json
@@ -14,6 +14,9 @@
     },
     {
       "path": "./../../shared/core/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/util/tsconfig.json"
     }
   ]
 }
