--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -188,6 +188,9 @@
     },
     {
       "path": "../../service/recovery-command-control-hub/tsconfig.json"
+    },
+    {
+      "path": "../../domain/recovery-continuity-lab-core/tsconfig.json"
     }
   ]
 }
