Add recovery cadence orchestration stack and frontend lab

--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -190,6 +190,9 @@
       "path": "../../service/recovery-command-control-hub/tsconfig.json"
     },
     {
+      "path": "../../service/recovery-cadence-coordinator/tsconfig.json"
+    },
+    {
       "path": "../../domain/recovery-continuity-lab-core/tsconfig.json"
     }
   ]
