feat: expand recovery stress lab for orchestration stress coverage

--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -194,6 +194,12 @@
     },
     {
       "path": "../../domain/recovery-continuity-lab-core/tsconfig.json"
+    },
+    {
+      "path": "../../domain/recovery-stress-lab/tsconfig.json"
+    },
+    {
+      "path": "../../service/recovery-stress-lab-orchestrator/tsconfig.json"
     }
   ]
 }
