--- a/packages/domain/recovery-stress-lab/tsconfig.json
+++ b/packages/domain/recovery-stress-lab/tsconfig.json
@@ -11,6 +11,9 @@
   "references": [
     {
       "path": "./../../shared/core/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/analytics/tsconfig.json"
     }
   ]
 }
