--- a/packages/domain/recovery-stress-lab/package.json
+++ b/packages/domain/recovery-stress-lab/package.json
@@ -14,6 +14,7 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "@shared/core": "workspace:*"
+    "@shared/core": "workspace:*",
+    "@domain/analytics": "workspace:*"
   }
 }
