--- a/packages/domain/recovery-stress-lab/package.json
+++ b/packages/domain/recovery-stress-lab/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@shared/core": "workspace:*",
-    "@domain/analytics": "workspace:*"
+    "@domain/analytics": "workspace:*",
+    "@shared/util": "workspace:*"
   }
 }
