--- a/packages/service/recovery-stress-lab-orchestrator/tsconfig.json
+++ b/packages/service/recovery-stress-lab-orchestrator/tsconfig.json
@@ -17,6 +17,9 @@
     },
     {
       "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/type-level/tsconfig.json"
     }
   ]
 }
