--- a/packages/domain/recovery-stress-lab/tsconfig.json
+++ b/packages/domain/recovery-stress-lab/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "./../../shared/core/tsconfig.json"
     },
     {
+      "path": "./../../shared/util/tsconfig.json"
+    },
+    {
       "path": "./../../domain/analytics/tsconfig.json"
     }
   ]
