feat(cadence): expand orchestration and cockpit TS/React surface

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "pnpm -r --parallel run build",
     "count-ts-lines": "bash scripts/count.sh",
     "count": "bash scripts/count.sh",
-    "typecheck": "pnpm exec tsc -b tsconfig.json --pretty false"
+    "typecheck": "pnpm exec tsc -b tsconfig.json --pretty false",
+    "tsz-typecheck": "if command -v tsz >/dev/null 2>&1; then tsz --project tsconfig.json; else pnpm dlx @mohsen-azimi/tsz-dev --project tsconfig.json; fi"
   },
   "devDependencies": {
     "@types/node": "^25.3.0",
