--- a/packages/domain/recovery-operations-cadence/package.json
+++ b/packages/domain/recovery-operations-cadence/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@domain/recovery-orchestration": "workspace:*",
     "@domain/recovery-operations-models": "workspace:*",
+    "@domain/recovery-readiness": "workspace:*",
     "@shared/type-level": "workspace:*",
     "@shared/core": "workspace:*",
     "zod": "^3.24.0"
