--- a/packages/service/fulfillment-intelligence-orchestrator/package.json
+++ b/packages/service/fulfillment-intelligence-orchestrator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@app/fulfillment-console",
+  "name": "@service/fulfillment-intelligence-orchestrator",
   "version": "0.0.1",
   "private": true,
   "main": "dist/index.js",
@@ -15,12 +15,12 @@
   },
   "dependencies": {
     "@service/fulfillment-planner": "workspace:*",
-    "@service/fulfillment-intelligence-orchestrator": "workspace:*",
     "@domain/fulfillment-orchestration-analytics": "workspace:*",
     "@data/fulfillment-telemetry-store": "workspace:*",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0"
+    "@shared/result": "workspace:*",
+    "@shared/core": "workspace:*",
+    "@shared/protocol": "workspace:*",
+    "@shared/util": "workspace:*",
+    "zod": "^3.24.0"
   }
 }
