chore(incident): expand ts monorepo stress surface with incident runtime modules

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -36,6 +36,9 @@
     "@data/continuity-readiness-store": "workspace:*",
     "@service/continuity-readiness-orchestrator": "workspace:*",
     "@domain/recovery-continuity-readiness": "workspace:*",
+    "@shared/core": "workspace:*",
+    "@shared/util": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "@domain/recovery-command-forge": "workspace:*",
     "@domain/recovery-operations-models": "workspace:*",
     "@domain/recovery-command-studio": "workspace:*",
