--- a/packages/data/incident-hub/tsconfig.json
+++ b/packages/data/incident-hub/tsconfig.json
@@ -17,6 +17,12 @@
     },
     {
       "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/util/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/type-level/tsconfig.json"
     }
   ]
 }
