--- a/packages/data/incident-hub/package.json
+++ b/packages/data/incident-hub/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "@domain/incident-management": "workspace:*",
     "@shared/result": "workspace:*",
-    "@shared/core": "workspace:*"
+    "@shared/core": "workspace:*",
+    "@shared/util": "workspace:*",
+    "@shared/type-level": "workspace:*",
+    "zod": "^3.24.0"
   }
 }
