--- a/packages/domain/incident-management/package.json
+++ b/packages/domain/incident-management/package.json
@@ -14,8 +14,9 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "@shared/core": "workspace:*",
     "@shared/type-level": "workspace:*",
+    "@shared/core": "workspace:*",
+    "@shared/util": "workspace:*",
     "zod": "^3.24.0"
   }
 }
