--- a/packages/domain/recovery-stress-lab/tsconfig.json
+++ b/packages/domain/recovery-stress-lab/tsconfig.json
@@ -9,14 +9,10 @@
     "src/**/*"
   ],
   "references": [
-    {
-      "path": "./../../shared/core/tsconfig.json"
-    },
-    {
-      "path": "./../../shared/util/tsconfig.json"
-    },
-    {
-      "path": "./../../domain/analytics/tsconfig.json"
-    }
+    { "path": "./../../shared/core/tsconfig.json" },
+    { "path": "./../../shared/type-level/tsconfig.json" },
+    { "path": "./../../shared/util/tsconfig.json" },
+    { "path": "./../../domain/analytics/tsconfig.json" },
+    { "path": "./../../domain/recovery-lab-governance/tsconfig.json" }
   ]
 }
