--- a/packages/data/recovery-incident-lab-store/package.json
+++ b/packages/data/recovery-incident-lab-store/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@domain/recovery-incident-lab-core": "workspace:*",
+    "@domain/recovery-stress-lab": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/result": "workspace:*"
   }
