--- a/packages/service/recovery-stress-lab-orchestrator/tsconfig.json
+++ b/packages/service/recovery-stress-lab-orchestrator/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "./../../domain/recovery-stress-lab/tsconfig.json"
     },
     {
+      "path": "./../../data/recovery-incident-lab-store/tsconfig.json"
+    },
+    {
       "path": "./../../shared/core/tsconfig.json"
     },
     {
