feat: expand recovery cockpit orchestration surface

--- a/packages/service/recovery-cockpit-orchestrator/package.json
+++ b/packages/service/recovery-cockpit-orchestrator/package.json
@@ -17,6 +17,7 @@
     "@domain/recovery-cockpit-intelligence": "workspace:*",
     "@domain/recovery-cockpit-models": "workspace:*",
     "@domain/recovery-cockpit-workloads": "workspace:*",
+    "@domain/recovery-cockpit-orchestration-core": "workspace:*",
     "@data/recovery-cockpit-analytics": "workspace:*",
     "@data/recovery-cockpit-insights": "workspace:*",
     "@data/recovery-cockpit-store": "workspace:*",
