--- a/packages/domain/recovery-cockpit-orchestration-core/package.json
+++ b/packages/domain/recovery-cockpit-orchestration-core/package.json
@@ -14,6 +14,8 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@shared/util": "workspace:*",
+    "@domain/recovery-cockpit-models": "workspace:*",
     "zod": "^3.24.0"
   }
 }
