--- a/packages/domain/recovery-cockpit-orchestration-core/tsconfig.json
+++ b/packages/domain/recovery-cockpit-orchestration-core/tsconfig.json
@@ -7,5 +7,13 @@
   },
   "include": [
     "src/**/*"
+  ],
+  "references": [
+    {
+      "path": "./../../shared/util/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-cockpit-models/tsconfig.json"
+    }
   ]
 }
