Expand recovery incident lab modules and fix ts build

--- a/packages/service/recovery-incident-lab-orchestrator/package.json
+++ b/packages/service/recovery-incident-lab-orchestrator/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@domain/recovery-incident-lab-core": "workspace:*",
     "@data/recovery-incident-lab-store": "workspace:*",
+    "@shared/validation": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/result": "workspace:*"
   }
