--- a/packages/service/recovery-incident-lab-orchestrator/tsconfig.json
+++ b/packages/service/recovery-incident-lab-orchestrator/tsconfig.json
@@ -16,6 +16,9 @@
       "path": "./../../data/recovery-incident-lab-store/tsconfig.json"
     },
     {
+      "path": "./../../shared/validation/tsconfig.json"
+    },
+    {
       "path": "./../../shared/core/tsconfig.json"
     },
     {
