--- a/packages/data/recovery-incident-lab-store/tsconfig.json
+++ b/packages/data/recovery-incident-lab-store/tsconfig.json
@@ -16,6 +16,9 @@
       "path": "./../../domain/recovery-stress-lab/tsconfig.json"
     },
     {
+      "path": "./../../shared/validation/tsconfig.json"
+    },
+    {
       "path": "./../../shared/core/tsconfig.json"
     },
     {
