--- a/packages/domain/recovery-incident-lab-core/tsconfig.json
+++ b/packages/domain/recovery-incident-lab-core/tsconfig.json
@@ -14,6 +14,9 @@
     },
     {
       "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/validation/tsconfig.json"
     }
   ]
 }
