feat(control-plane): expand tsz stress test domain and UI modules

--- a/packages/app/adaptive-ops-console/package.json
+++ b/packages/app/adaptive-ops-console/package.json
@@ -30,6 +30,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0"
+    "@types/react-dom": "^19.0.0",
+    "@domain/recovery-operations-control-plane": "workspace:*"
   }
 }
