--- a/packages/app/adaptive-ops-console/tsconfig.json
+++ b/packages/app/adaptive-ops-console/tsconfig.json
@@ -52,6 +52,9 @@
     },
     {
       "path": "./../../data/recovery-readiness-store/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-operations-control-plane/tsconfig.json"
     }
   ]
 }
