--- a/packages/data/streaming-dashboard-store/tsconfig.json
+++ b/packages/data/streaming-dashboard-store/tsconfig.json
@@ -19,6 +19,9 @@
       "path": "./../../shared/result/tsconfig.json"
     },
     {
+      "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
       "path": "./../../data/repositories/tsconfig.json"
     }
   ]
