--- a/packages/service/streaming-control/tsconfig.json
+++ b/packages/service/streaming-control/tsconfig.json
@@ -11,6 +11,18 @@
   "references": [
     {
       "path": "./../../domain/streaming-engine/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/streaming-observability/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/core/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/result/tsconfig.json"
     }
   ]
 }
