--- a/packages/service/streaming-dashboard-orchestrator/tsconfig.json
+++ b/packages/service/streaming-dashboard-orchestrator/tsconfig.json
@@ -26,6 +26,9 @@
     },
     {
       "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
+      "path": "./../../service/streaming-control/tsconfig.json"
     }
   ]
 }
