--- a/packages/data/streaming-dashboard-store/package.json
+++ b/packages/data/streaming-dashboard-store/package.json
@@ -17,6 +17,7 @@
     "@domain/streaming-observability": "workspace:*",
     "@domain/streaming-engine": "workspace:*",
     "@shared/result": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "@data/repositories": "workspace:*",
     "zod": "^3.24.0"
   }
