--- a/packages/service/streaming-control/package.json
+++ b/packages/service/streaming-control/package.json
@@ -14,6 +14,10 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "@domain/streaming-engine": "workspace:*"
+    "@domain/streaming-engine": "workspace:*",
+    "@domain/streaming-observability": "workspace:*",
+    "@shared/core": "workspace:*",
+    "@shared/type-level": "workspace:*",
+    "@shared/result": "workspace:*"
   }
 }
