chore: stabilize stress-lab runtime registry and expand studio stress domain modules

--- a/packages/app/recovery-incident-lab-console/tsconfig.json
+++ b/packages/app/recovery-incident-lab-console/tsconfig.json
@@ -18,6 +18,9 @@
       "path": "./../../service/recovery-incident-lab-orchestrator/tsconfig.json"
     },
     {
+      "path": "./../../service/recovery-stress-lab-orchestrator/tsconfig.json"
+    },
+    {
       "path": "./../../data/recovery-incident-lab-store/tsconfig.json"
     },
     {
