--- a/packages/domain/recovery-stress-lab/tsconfig.json
+++ b/packages/domain/recovery-stress-lab/tsconfig.json
@@ -11,6 +11,7 @@
   "references": [
     { "path": "./../../shared/core/tsconfig.json" },
     { "path": "./../../shared/type-level/tsconfig.json" },
+    { "path": "./../../shared/stress-lab-runtime/tsconfig.json" },
     { "path": "./../../shared/util/tsconfig.json" },
     { "path": "./../../domain/analytics/tsconfig.json" },
     { "path": "./../../domain/recovery-lab-governance/tsconfig.json" }
