--- a/packages/domain/recovery-stress-lab/package.json
+++ b/packages/domain/recovery-stress-lab/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@shared/core": "workspace:*",
+    "@shared/stress-lab-runtime": "workspace:*",
     "@shared/type-level": "workspace:*",
     "@domain/recovery-lab-governance": "workspace:*",
     "zod": "^3.24.0"
