--- a/packages/app/stream-dashboard/package.json
+++ b/packages/app/stream-dashboard/package.json
@@ -8,7 +8,10 @@
     ".": "./src/index.ts",
     "./src": "./src/index.ts",
     "./*": "./src/*.ts",
-    "./src/*": "./src/*.ts"
+    "./*/*": "./src/*/*.ts",
+    "./src/*": "./src/*",
+    "./src/*/*": "./src/*/*",
+    "./src/*/*/": "./src/*/*"
   },
   "scripts": {
     "build": "tsc -b"
@@ -16,11 +19,12 @@
   "dependencies": {
     "@data/streaming-dashboard-store": "workspace:*",
     "@service/streaming-dashboard-orchestrator": "workspace:*",
-    "@domain/recovery-stress-lab": "workspace:*",
     "@service/recovery-stress-lab-orchestrator": "workspace:*",
+    "@domain/recovery-stress-lab": "workspace:*",
     "@domain/streaming-observability": "workspace:*",
     "@domain/streaming-engine": "workspace:*",
     "@shared/type-level": "workspace:*",
+    "@shared/stress-lab-runtime": "workspace:*",
     "@shared/result": "workspace:*",
     "@service/streaming-control": "workspace:*",
     "react": "^19.0.0",
