--- a/packages/app/stream-dashboard/tsconfig.json
+++ b/packages/app/stream-dashboard/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "composite": true,
-    "declaration": true
-    ,
+    "declaration": true,
     "jsx": "react-jsx",
     "lib": [
       "DOM",
@@ -16,10 +15,13 @@
   ],
   "references": [
     {
-      "path": "./../../domain/streaming-engine/tsconfig.json"
+      "path": "./../../app/recovery-console/tsconfig.json"
     },
     {
       "path": "./../../domain/streaming-observability/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/streaming-engine/tsconfig.json"
     },
     {
       "path": "./../../domain/recovery-stress-lab/tsconfig.json"
@@ -35,6 +37,12 @@
     },
     {
       "path": "./../../service/recovery-stress-lab-orchestrator/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/stress-lab-runtime/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/result/tsconfig.json"
     }
   ]
 }
