feat(incident-lab): expand ts monorepo with advanced incident orchestration modules

--- a/packages/app/recovery-incident-lab-console/package.json
+++ b/packages/app/recovery-incident-lab-console/package.json
@@ -20,6 +20,7 @@
     "@service/recovery-incident-lab-orchestrator": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/result": "workspace:*",
+    "@shared/stress-lab-runtime": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
