--- a/packages/app/recovery-incident-lab-console/tsconfig.json
+++ b/packages/app/recovery-incident-lab-console/tsconfig.json
@@ -31,6 +31,9 @@
     },
     {
       "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/stress-lab-runtime/tsconfig.json"
     }
   ]
 }
