--- a/packages/data/recovery-incident-lab-store/package.json
+++ b/packages/data/recovery-incident-lab-store/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@domain/recovery-incident-lab-core": "workspace:*",
     "@domain/recovery-stress-lab": "workspace:*",
+    "@shared/stress-lab-runtime": "workspace:*",
     "@shared/validation": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/result": "workspace:*"
