--- a/packages/domain/recovery-incident-lab-core/tsconfig.json
+++ b/packages/domain/recovery-incident-lab-core/tsconfig.json
@@ -16,6 +16,9 @@
       "path": "./../../shared/type-level/tsconfig.json"
     },
     {
+      "path": "./../../shared/stress-lab-runtime/tsconfig.json"
+    },
+    {
       "path": "./../../shared/validation/tsconfig.json"
     }
   ]
