--- a/packages/service/recovery-incident-lab-orchestrator/package.json
+++ b/packages/service/recovery-incident-lab-orchestrator/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@domain/recovery-incident-lab-core": "workspace:*",
+    "@shared/stress-lab-runtime": "workspace:*",
     "@data/recovery-incident-lab-store": "workspace:*",
     "@shared/validation": "workspace:*",
     "@shared/core": "workspace:*",
