--- a/packages/data/recovery-incident-lab-store/tsconfig.json
+++ b/packages/data/recovery-incident-lab-store/tsconfig.json
@@ -23,6 +23,9 @@
     },
     {
       "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/stress-lab-runtime/tsconfig.json"
     }
   ]
 }
