--- a/packages/data/policy-orchestration-store/package.json
+++ b/packages/data/policy-orchestration-store/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@data/repositories": "workspace:*",
+    "@domain/policy-orchestration": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/result": "workspace:*"
   }
