--- a/packages/data/policy-orchestration-store/tsconfig.json
+++ b/packages/data/policy-orchestration-store/tsconfig.json
@@ -16,6 +16,12 @@
       "path": "./../../shared/core/tsconfig.json"
     },
     {
+      "path": "./../../domain/policy-orchestration/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
       "path": "./../../shared/result/tsconfig.json"
     }
   ]
