feat(ts): expand incident lab and timeline studio for advanced TS stress coverage

--- a/packages/domain/recovery-incident-lab-core/tsconfig.json
+++ b/packages/domain/recovery-incident-lab-core/tsconfig.json
@@ -19,6 +19,9 @@
       "path": "./../../shared/stress-lab-runtime/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-stress-lab/tsconfig.json"
+    },
+    {
       "path": "./../../shared/validation/tsconfig.json"
     }
   ]
