--- a/packages/domain/recovery-incident-lab-core/package.json
+++ b/packages/domain/recovery-incident-lab-core/package.json
@@ -14,9 +14,11 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@domain/recovery-stress-lab": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/stress-lab-runtime": "workspace:*",
     "@shared/type-level": "workspace:*",
-    "@shared/validation": "workspace:*"
+    "@shared/validation": "workspace:*",
+    "zod": "^3.24.0"
   }
 }
