feat: add recovery horizon studio core stress modules and React control plane

--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -70,6 +70,7 @@
     "@service/recovery-incident-scenario-orchestrator": "workspace:*",
     "@infrastructure/recovery-scenario-gateway": "workspace:*",
     "@domain/recovery-horizon-engine": "workspace:*",
-    "@data/recovery-horizon-store": "workspace:*"
+    "@data/recovery-horizon-store": "workspace:*",
+    "@domain/recovery-horizon-studio-core": "workspace:*"
   }
 }
