--- a/packages/app/recovery-incident-dashboard/tsconfig.json
+++ b/packages/app/recovery-incident-dashboard/tsconfig.json
@@ -158,6 +158,9 @@
       "path": "./../../domain/recovery-horizon-engine/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-horizon-studio-core/tsconfig.json"
+    },
+    {
       "path": "./../../data/recovery-horizon-store/tsconfig.json"
     },
     {
